<resources>
    <string name="app_name">Wheel chair controller</string>
    <string name="logo">logo</string>
    <string name="top">top</string>
    <string name="center">center</string>
    <string name="bottom">bottom</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="_192_16_254_1">192.16.254.1</string>
    <string name="next">Next</string>
</resources>