<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/center"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@string/center" />

    <ImageButton
        android:id="@+id/top"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/top"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:layout_constraintEnd_toEndOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left"
        android:contentDescription="@string/top" />

    <ImageButton
        android:id="@+id/bottom"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/down"
        app:layout_constraintEnd_toEndOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@+id/center"
        android:contentDescription="@string/bottom" />

    <ImageButton
        android:id="@+id/right"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/right"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toTopOf="@+id/top"
        android:contentDescription="@string/right" />

    <ImageButton
        android:id="@+id/left"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/left"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/center"
        app:layout_constraintTop_toTopOf="@+id/top"
        android:contentDescription="@string/left" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/bottom" />



</androidx.constraintlayout.widget.ConstraintLayout>